# describe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  describe.hpp
examples/: boost.cpp  go_interface.cpp  nlohmann.cpp
include/describe/: describe.hpp
interop/: boost.hpp
test/: CMakeLists.txt  aliases.cpp  attributes.cpp  basic.cpp  inheritance.cpp  perf.cpp  private_access.cpp  templates.cpp  test.cpp
