project(describe LANGUAGES C CXX)
add_library(describe INTERFACE)
add_library(describe::describe ALIAS describe)
target_include_directories(describe INTERFACE include)

option(DESCRIBE_WITH_TESTS "Build tests for DESCRIBE()" OFF)
file(GLOB TEST_SRC test/*.cpp)
if (DESCRIBE_WITH_TESTS)
    add_executable(describe_test ${TEST_SRC})
    target_link_libraries(describe_test PRIVATE describe)
endif()
